--- a/style.scss
+++ b/style.scss
@@ -7,13 +7,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    height: auto;
 }
 
 body {
     font: 15px/1.5 Arial, Helvetica,sans-serif;
 	background-color: #ffffff;
     color: #524343;
+    
 }
 
 .header {
@@ -21,6 +21,7 @@ body {
 
     &__nav {
         height: 5rem;
+        width: auto;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -43,10 +44,11 @@ body {
     
 }
 hr {
-    margin-top: 100px;
-    margin-bottom: 50px;
+    margin-top: 50px;
+    margin-bottom: 20px;
     border: 3px solid;
     color: rgb(162, 208, 226);
+    align-items: center;
 }
 
 li {
@@ -77,27 +79,29 @@ a:hover {
     width: auto;
     height: auto;
     display: block;
+    margin-top: 120px;
+    
     
 }
 .arrow {
     display: flex;
     justify-content: center;
-    
+    text-align: center;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
-
-
  .header__section {
-     height: 80vh;
+     height: 70vh;
+     width: auto;
      display: flex;
      justify-content: space-between;
      padding: 0 10px;
      align-items: center;
-
      &__article {
         justify-content: left;
         font-size: 1.3rem;
      }
-
  }
 
  .main {
@@ -221,7 +225,7 @@ a:hover {
         & form {
             display: flex;
             flex-direction: column;
-            height: 70%;
+            height: 80%;
             width: 30%;
             align-items: left;
             justify-content: space-evenly;
@@ -259,6 +263,7 @@ a:hover {
         flex-direction: row;
         height: 80px;
         width: auto;
+        margin-bottom: 0;
         align-items: center;
         border: 3px solid rgb(162, 208, 226);
         border-radius: 10px;
@@ -275,3 +280,56 @@ a:hover {
         
     } 
  }
+ 
+ #right-moon {
+    animation: moon 1s infinite linear;
+    transform-origin: center;
+    transform-box: fill-box;
+    opacity: 1000px;
+    
+}
+
+@keyframes moon {
+    from {
+        transform: rotateZ(180deg);
+    }
+    to {
+        transform: rotateX(180deg);
+    }
+}
+
+#night-shadow {
+    animation: shadow 1s ease-in-out infinite alternate;
+    will-change: transform;
+    transform-origin: center;
+    transform-box: fill-box;
+    transform-origin: bottom;
+   
+    
+}
+
+@keyframes shadow {
+    from {
+        transform: rotateY(180deg);
+    }
+    to {
+        transform: rotateX(360deg);
+    }
+}
+
+#min-fire {
+    animation: fire 1s infinite linear;
+    transform-origin: bottom;
+    
+    transform: scale(1.2, 1.2);
+    
+}
+
+@keyframes fire{
+    from{
+        transform: scale(1, 1.5);
+    }
+    to {
+        transform: scale(1, 1);
+    }
+}
