FIxed AVG and responsive

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
-@use 'variables' as var;
-@use 'mixins' as mix;
+@use 'variables' ;
+@use 'mixins';
 
 
 
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    
 }
 
 body {
@@ -36,7 +37,18 @@ body {
             padding: 0 12px;
             justify-content: space-between;
             font-size: 1.6rem;  
-            
+            // & main {
+            //     @include mediaMd {
+            //         display: none;
+            //         font-size: 5px
+            //     }
+            // }
+            // & li {
+            //     @include mediaMd {
+            //         display: none;
+            //         font-size: 5px
+            //     }
+            // }
         }
     
     }
@@ -76,9 +88,8 @@ a:hover {
 .img-logo {
     display: flex;
     float: right;
-    width: auto;
+    max-width: 100%;
     height: auto;
-    display: block;
     margin-top: 120px;
     
     
@@ -106,8 +117,7 @@ a:hover {
 
  .main {
      width: 100%;
-     overflow: hidden;
-
+     
      &__section {
         display: flex;
         justify-content: space-evenly;
@@ -163,6 +173,7 @@ a:hover {
      border-radius: 10px;
      margin-bottom: 50px;
      justify-content: space-evenly;
+     margin: 10px;
      
      & li{   
         border: 2px solid rgb(162, 208, 226);
@@ -187,6 +198,7 @@ a:hover {
         height: 300px;
         width: 400px;
         display: flex;
+        
         border: 3px solid rgb(162, 208, 226);
         border-radius: 20px;
     }
@@ -203,7 +215,7 @@ a:hover {
     }
     
      &__article {
-        display: flex;
+        display: block;
         justify-content: space-evenly;
         padding: 10px 30px;
         
@@ -333,3 +345,150 @@ a:hover {
         transform: scale(1, 1);
     }
 }
+
+@media screen and (max-width: 520px) {
+    body {
+        margin: 10px;
+        padding: 10px;
+        font-size: 10px;
+        line-height: 1;
+        grid-template-columns: 4fr;
+        width: 100%;
+        
+    }
+    .header__nav__bar {
+        font-size: 1.2rem;
+        font-weight: bold;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        justify-content: space-between;
+    }
+    .header__section h3 {
+        font-size: 1.5rem;
+        margin-top: -400px;
+        margin-bottom: 20px;
+        
+    }
+    .header__section p {
+        font-size: 1rem;
+        margin-bottom: -2000px;
+        line-height: 1.5;
+    }
+    .arrow {
+        margin-top: -450px;
+    }
+
+    .img-logo {
+       width: 100%;
+       height: auto;
+       margin-top: auto;
+       margin-bottom: 20px;
+       margin: 10px;
+    }
+    .main {
+        height: auto;
+        width: 100%;
+    }
+    .main h2 {
+        font-size: 1.5rem;
+    }
+    .tech__icon {
+        font-size: 15px;
+        grid-template-columns: 2fr;
+     
+    }
+    .main__section__article {
+        flex-direction: column;
+    }
+     .main h3 {
+        font-size: 1.5rem;
+        margin-bottom: 20px;
+        
+    }
+    .main p {
+        font-size: 1rem;
+        line-height: 1.5;
+    }
+    .article__aside img {
+        width: 100%;
+        height: auto;
+    }
+    main .btn {
+       font-size: 1rem;
+       
+    }
+    .article__aside p {
+        width: 100%;
+        height: auto;
+        font-size: 1rem;
+    }
+    .article__aside h3 {
+        width: 100%;
+        height: auto;
+        font-size: 1.3rem;
+        margin-top: 40px;
+    }
+}
+    .main__section2 {
+    flex-direction: column;
+    font-size: 10px;
+    width: 100%;
+    height: auto;
+ 
+}
+    .main__section2__article {
+        flex-direction: column;
+        font-size: 10px;
+        width: 100%;
+        
+    }
+
+    .footer__section__form {
+        flex-direction: column;
+        width: 400px;
+        margin-bottom: -500px;
+
+    }
+    
+    .footer__article {
+        flex-direction: column;
+        width: auto;
+        height: auto;
+       font-size: 1.5rem;
+       
+    }
+    .footer__article p {
+        font-size: 1.2rem;
+        margin: 20px;
+        text-align: center;
+        
+    }
+    .footer .btn {
+        font-size: 1rem;
+        margin: 0px;
+        
+    }
+
+
+/////////////////////
+
+@media screen and (max-width: 768px) {
+    .main__section {
+        flex-direction: column;
+    }
+    .tech__icon {
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .main__section {
+        flex-direction: column;
+    }
+}
+
+    
+
